refactor: controller wildcards removed